# my_stramlit_app

./: .gitignore  README.md  app.py  pyproject.toml
